<resources>

    <string name="app_name">InfoPark</string>
    <string name="toolbar_image">toolbar_image</string>
    <string name="logo">logo</string>
    <string name="skip_button">skip button</string>
    <string name="back">Back</string>
    <string name="skip">SKIP</string>
    <string name="email" ><font size="50">Email</font></string>
    <string name="username"><font size="50">UserName</font></string>
    <string name="email_or_username"><font size="50">Email/Username</font></string>
    <string name="password"><font size="50">Password</font></string>
    <string name="confirm">CONFIRM</string>
    <string name="done_image">done_image</string>
    <string name="dialog_title">Register completed</string>
    <string name="dialog_message">Please verify your account via an email sent to you</string>
    <string name="dialog_button">Okay</string>
    <string name="register_manually">Or register manually</string>
    <string name="dialog_title_google">congratulations</string>
    <string name="dialog_message_google">Register completed</string>
    <string name="preference_file_key">com.example.infopark</string>
    <string name="loggedIn">loggedIn</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="save_my_location">Save location</string>
    <string name="add_new_info">Add new info</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="login_first">Please login first</string>
    <string name="type_to_search">Type to Search</string>
    <string name="uniqueID">uniqueID</string>
    <string name="report_success">Report Success!</string>
    <string name="click_for_info">Click for info</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="username_too_long">Username is too long</string>
    <string name="password_length">Password must be less than 15 and more than 8 characters in length</string>
    <string name="password_uppercase">Password must have at least one uppercase character</string>
    <string name="password_lowercase">Password must have at least one lowercase character</string>
    <string name="password_number">Password must have at least one number</string>
    <string name="password_special">Password must have at least one special character among @#$%</string>
    <string name="payment">PAYMENT</string>
    <string name="sunday">SUN</string>
    <string name="thursday">THU</string>
    <string name="sun_thu">SUN-THU</string>
    <string name="fri">FRI</string>
    <string name="from">FROM:</string>
    <string name="to">TO:</string>
    <string name="max">MAX</string>
    <string name="hours">HOURS</string>
    <string name="send">Send</string>
    <string name="parking_info">PARKING INFO</string>
    <string name="permission_not_granted">Location permission not granted</string>
    <string name="network_error">Network Error</string>
    <string name="no_info">No info to show</string>
    <string name="go_back_to_live">Please go back to live location first</string>
    <string name="save_location_first">Please save your car location first</string>
    <string name="cant_save_searched_location">Can\'t save searched location</string>
    <string name="location_saved">Location saved</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="invalid_email_username_or_password">Invalid email/username or password</string>
    <string name="unverified_user">Unverified user</string>
    <string name="username_already_exist">Username already exist!</string>
    <string name="email_already_exist">Email already exist!</string>
    <string name="user_not_found">User not found</string>
    <string name="address_not_exist">Address not exist</string>
    <string name="already_report">You already report to this location!</string>
    <string name="cant_get_saved_location">Can\'t get saved location</string>
    <string name="choose_language">Choose Language...</string>
    <string name="add_fields">Add fields</string>
    <string name="regular_sign">Regular sign</string>
    <string name="max_hours">Max hours</string>
    <string name="free_parking_for_regional_parking_sign">Free parking for regional parking sign</string>
    <string name="unloading_and_charging_parking_only">Unloading and charging parking only</string>
    <string name="vehicle_weight_limit">Vehicle weight limit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear all</string>
    <string name="regional_sign">REGIONAL PARKING SIGN</string>
    <string name="parking_sign_number">Parking sign No.</string>
    <string name="hours_limit">HOURS LIMIT</string>
    <string name="unloading_charging">UNLOADING CHARGING</string>
    <string name="weight_limit">WEIGHT LIMIT</string>
    <string name="ton">ton</string>
    <string name="empty_report_error">Can not send empty report!</string>
    <string name="version">Version 2.0</string>
    <string name="back_button" translatable="false">back_button</string>
    <string name="sign_in_google">sign in with google</string>
    <string name="register_with_google">register with google</string>
    <string name="drawer_open" translatable="false">drawer open</string>
    <string name="drawer_close" translatable="false">drawer close</string>
    <string name="app_mail" translatable="false">infoparkapp4@gmail.com</string>
    <string name="app_web_url" translatable="false">https://www.infoparknow.com</string>
    <string name="help">help</string>
    <string name="searched_location">searched location</string>
    <string name="saved_location">saved location</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome!</string>
    <string name="get_started">Get Started</string>
    <string name="introOpened" translatable="false">introOpened</string>
    <string name="get_info_description">click for info instructions at any time</string>
    <string name="save_location_description">save your car parking location</string>
    <string name="report_description">add/update info about parking instructions</string>

</resources>