<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReportActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="417dp"
        android:layout_height="46dp"
        android:layout_marginEnd="197dp"
        android:background="#0471B7"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="157dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="false"
        android:layout_gravity="center"

        android:contentDescription="@string/toolbar_image"
        android:orientation="vertical"
        android:src="@drawable/infopark_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/back_button"
        android:onClick="finishActivity"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="100dp"
            android:background="@color/signpost_yellow"
            android:stretchColumns="*"
            app:layout_constraintBottom_toTopOf="@+id/reportButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="30dp">

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dip"
                    android:text="@string/payment"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="30dp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dip"
                    android:text="@string/sunday"
                    android:textAlignment="viewEnd"
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dip"
                    android:text="-"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dip"
                    android:text="@string/thursday"
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:text="@string/from"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/fromSunThuSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:text="@string/to"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/toSunThuSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dip"
                    android:text="@string/fri"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:text="@string/from"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/fromFriSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:text="@string/to"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/toFriSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dip"
                    android:text="@string/max"
                    android:textAlignment="viewEnd"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/maxHoursSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dip"
                    android:text="@string/hours"
                    android:textColor="#000"
                    android:textSize="20dp" />

            </TableRow>

        </TableLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="84dp"
        android:foregroundTint="#2B2B2B"
        android:progressTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="301dp"
        android:background="#3C3F41"
        android:onClick="reportClick"
        android:text="@string/send"
        android:textColor="#F4F0F0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.956" />

</androidx.constraintlayout.widget.ConstraintLayout>