<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/skip_button"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/skip_button"
        android:onClick="skipActivity"
        android:text="@string/skip"
        android:textColor="@color/white"

        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="com.codinginflow.textinputlayoutexample.MainActivity">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/toolbar_image"
            android:src="@drawable/infopark_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email_or_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:textColorHint="@color/white"

            app:errorEnabled="true"
            app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_blue_dark_background"
                android:drawableStart="@drawable/ic_person"
                android:inputType="text"
                android:paddingStart="5dip"
                android:paddingEnd="5dip"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:hintAnimationEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_blue_dark_background"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword"
                android:paddingStart="5dip"
                android:paddingEnd="5dip"
                android:textColor="@color/white"
                android:textSize="17sp"
                 />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_white_background"
            android:onClick="loginClick"
            android:text="@string/log_in"
            android:textColor="@color/yellow"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in_google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_white_background"
            android:drawableStart="@drawable/ic_google_icon"
            android:onClick="signInToGoogle"
            android:paddingStart="15dip"
            android:paddingEnd="15dip"
            android:text="@string/sign_in_google"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_yellow_background"
            android:onClick="registerActivity"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="78dp"
        android:foregroundTint="#2B2B2B"
        android:progressTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>